Got a raw concept of how the menus will look like

--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -29,5 +29,11 @@
     <ClInclude Include="Game.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CONSTANTS.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
   </ItemGroup>
 </Project>
