--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -130,12 +130,25 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="HUD.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Skeleton.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CONSTANTS.h" />
+    <ClInclude Include="Entity.h" />
+    <ClInclude Include="Enviroment.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GenericFunctions.h" />
+    <ClInclude Include="HUD.h" />
+    <ClInclude Include="KeysBound.h" />
+    <ClInclude Include="Menu.h" />
+    <ClInclude Include="Object.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="Shapes.h" />
+    <ClInclude Include="Skeleton.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
